# Artificialntelligence-COS314

./: .gitignore  CMakeLists.txt  README.md
Assigment3Retry/: Matrix.cpp  Matrix.h  Network.cpp  Network.h  main  main.cpp  makefile  sharedTypes.h
Assignment1/: Bin.h  BinSet.h  BinSetBadFit.h  BinSetFirstFit.h  DataSet.h  README.MD  list all.txt  list.txt  main.cpp
Assignment2/: ACO.cpp  ACO.h  Genectic.h  Genetic.cpp  Genetic.h  Knapsack.cpp  Knapsack.h  README.md  main.cpp  sharedTypes.h
Assignment3/: CMakeLists.txt  GP.cpp  GP.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  main  main.cpp  makefile  sharedTypes.h  storage.txt
Assignment3/reference/: DecisionTree.cpp  DecisionTree.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Node.cpp  Node.h  main.cpp
GeneticAlgorithms/: ACO.cpp  ACO.h  Genetic.h  Knapsack.cpp  Knapsack.h  RouletteWheel.h  sharedTypes.h
IteratedLocalSearch/: DataSet.h
IterativeLocalSearch/: Bin.cpp  BinSet.cpp  BinSetBestFit.h  README.MD
NeuralNetwork/: CMakeLists.txt  Network.h  main.cpp  sharedTypes.h  storage.txt
